--- a/packages/utilities/react-loadable/package.json
+++ b/packages/utilities/react-loadable/package.json
@@ -1,11 +1,17 @@
 {
-  "name": "react-loadable",
+  "name": "@bbc/react-loadable",
   "version": "5.5.1",
   "description": "A higher order component for loading components with promises",
-  "main": "lib/index.js",
-  "author": "James Kyle <me@thejameskyle.com>",
+  "main": "dist/index.js",
+  "contributors": [
+    "James Kyle <me@thejameskyle.com>",
+    "BBC Psammead Maintainers <PsammeadMaintainers@bbc.co.uk>"
+  ],
   "license": "MIT",
-  "repository": "thejameskyle/react-loadable",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/bbc/psammead/tree/latest/packages/utilities/react-loadable"
+  },
   "files": [
     "babel.js",
     "webpack.js",
@@ -14,8 +20,7 @@
   "scripts": {
     "test": "jest --coverage",
     "build": "babel src -d lib",
-    "start": "yarn build && webpack && babel-node example/server.js",
-    "prepublish": "yarn build"
+    "start": "npm run build && webpack && babel-node example/server.js"
   },
   "dependencies": {
     "prop-types": "^15.5.0"
