:bath: please the linting gods, jk, ignore them

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -8,7 +8,9 @@
       "stylelint-processor-styled-components", {
         "parserPlugins": [
           "jsx",
-          "exportDefaultFrom"
+          "exportDefaultFrom",
+          "dynamicImport",
+          "classProperties"
         ]
       }
     ],
