:white_check_mark: Fix tests

--- a/packages/utilities/react-loadable/package.json
+++ b/packages/utilities/react-loadable/package.json
@@ -18,6 +18,7 @@
     "dist/**"
   ],
   "scripts": {
+    "test": "jest --coverage",
     "start": "webpack && babel-node example/server.js"
   },
   "dependencies": {
