:bath: babel clean u

--- a/package.json
+++ b/package.json
@@ -7,18 +7,17 @@
   "scripts": {
     "build": "npm run build:cjs && npm run build:esm",
     "build:cjs": "lerna exec --parallel -- babel src -d dist --ignore $npm_package_config_babel_ignore --root-mode upward",
-    "build:esm": "BABEL_TYPE=esm lerna exec --parallel -- babel src -d esm --configFile babel.config.js --ignore $npm_package_config_babel_ignore --root-mode upward",
+    "build:esm": "BABEL_TYPE=esm lerna exec --parallel -- babel src -d esm --ignore $npm_package_config_babel_ignore --root-mode upward",
     "build:storybook": "build-storybook -o storybook_dist",
-    "ci:packages": "npm ci && lerna exec -- npm ci",
+    "ci:packages": "npm ci && lerna exec -- npm ci && npm run build",
     "changeScanner": "node scripts/changeScanner",
     "bumpPackages": "node scripts/bumpPackages/cli",
     "bumpChangelogs": "node scripts/bumpChangelogs/cli",
     "regeneratePackageLocks": "node scripts/regeneratePackageLocks",
     "deploy-storybook": "gh-pages -d storybook_dist",
     "force-package-lock-https": "find . -type f -name \"package-lock.json\" | grep -v node_modules | xargs -I % sh -c 'echo \"Replacing http->https in %\"; sed -i \"\" -e \"s/http:\\/\\//https:\\/\\//g\" %'",
-    "install:packages": "npm i && lerna clean --yes && lerna bootstrap --hoist",
-    "install:packages:link": "npm i && lerna clean --yes && lerna bootstrap --hoist --force-local",
-    "postinstall": "npm run build",
+    "install:packages": "npm i && lerna clean --yes && lerna bootstrap --hoist && npm run build",
+    "install:packages:link": "npm i && lerna clean --yes && lerna bootstrap --hoist --force-local && npm run build",
     "postshrinkwrap": "if test -z $CI; then \n npm run force-package-lock-https \n fi",
     "preinstall": "sh scripts/enforceVersions.sh",
     "publish": "npm run build && node scripts/publish",
