--- a/packages/components/psammead-grid/package.json
+++ b/packages/components/psammead-grid/package.json
@@ -1,8 +1,8 @@
 {
   "name": "psammead-grid",
-  "version": "1.0.0",
+  "version": "1.0.1-alpha-1",
   "publishConfig": {
-    "tag": "alpha"
+    "tag": "alpha"  
   },
   "description": "Grid setup for components",
   "main": "dist/index.js",
